# boids

./: CMakeLists.txt  better_parallel.cpp  boh.cpp  boids_parallel_benchmark.cpp  boids_seq.cpp  boids_seq_benchmark.cpp  boids_sequential_results.json  boids_visualization.cpp  constants.h  naive_parallel.cpp  omp_boids.json  parallel.cpp  sequential.cpp  structures.h
